# btm301-metrics

./: .gitignore  pyproject.toml
class_project/: get_lefthandedness.py  main.tex  run_ols_kbo_hitters.py  run_ols_kbo_hitters_with_league.py  run_ols_kbo_pitchers.py  run_ols_kbo_pitchers_with_league.py  run_ols_mlb_hitters.py  run_ols_mlb_hitters_with_league.py  run_ols_mlb_pitchers.py  run_ols_mlb_pitchers_with_league.py
class_project/data/csv/: kbo_hitters.csv  kbo_pitchers.csv  mlb_hitters.csv  mlb_pitchers.csv
class_project/data/xlsx/: kbo_hitter.xlsx  kbo_pitcher.xlsx  mlb_hitter.xlsx  mlb_hitter_avg.csv  mlb_hitters.csv  mlb_pitcher.xlsx  mlb_pitcher_avg.csv
hw2/: main.py  ols.ipynb  ols.py
hw2/references/: main.m  nerlove.mat  ols.m
