[tool.poetry]
name = "btm301-metrics"
version = "0.1.0"
description = ""
authors = ["kosunghun317 <kosunghun317@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
ipykernel = "^6.29.5"
ruff = "^0.7.1"
pandas = {extras = ["openpyxl"], version = "^2.2.3"}
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pybaseball = "^2.2.7"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
